--- a/containers/front-end/Dockerfile
+++ b/containers/front-end/Dockerfile
@@ -1,11 +1,23 @@
-FROM node:8-alpine
+# Create image based on the official Node 6 image from dockerhub
+FROM node:8
 
-COPY app.js /
-COPY package.json /
-COPY public /public
+# Create a directory where our app will be placed
+RUN mkdir -p /usr/src/app
 
+# Change directory so that our commands run inside this new directory
+WORKDIR /usr/src/app
+
+# Copy dependency definitions
+COPY package.json /usr/src/app
+
+# Install dependecies
 RUN npm install
 
-EXPOSE 8080
+# Get all the code needed to run the app
+COPY . /usr/src/app
 
-CMD ["node", "app.js"]
+# Expose the port the app runs in
+EXPOSE 4200
+
+# Serve the app
+CMD ["npm", "start"]
