--- a/containers/map-api/package.json
+++ b/containers/map-api/package.json
@@ -21,7 +21,9 @@
     "express": "^4.15.x",
     "fs": "~0.0.1",
     "mongoose": "^4.13.x",
-    "router": "^1.3.2"
+    "pdfkit": "^0.8.3",
+    "router": "^1.3.2",
+    "svg-to-pdfkit": "^0.1.6"
   },
   "author": "Anthony Amanse",
   "license": "Apache-2.0"
