--- a/containers/blockchain/blockchainNetwork/Dockerfile
+++ b/containers/blockchain/blockchainNetwork/Dockerfile
@@ -1,16 +1,11 @@
 FROM docker.io/library/node:6.11.3
 
-ENV NODE_ENV production
-ENV PORT 3000
 ENV DOCKER_SOCKET_PATH /host/var/run/docker.sock
 ENV DOCKER_CCENV_IMAGE hyperledger/fabric-ccenv:x86_64-1.0.2
 
 RUN mkdir /app
 COPY . /app
 WORKDIR /app
-RUN apt update && apt install -y build-essential \
-      && npm install
-
-EXPOSE 3000
+RUN npm install
 
 CMD ["node", "index.js"]
