--- a/containers/map-api/package.json
+++ b/containers/map-api/package.json
@@ -8,7 +8,8 @@
     "node": "6.*"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha --timeout 600000"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
     "pdfkit": "^0.8.3",
     "router": "^1.3.2",
     "svg-to-pdfkit": "^0.1.6"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   },
   "author": "Anthony Amanse",
   "license": "Apache-2.0"
