--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,15 @@ addons:
 matrix:
   fast_finish: true
 
+# env:
+#   - TEST_RUN="./tests/test-docker.sh"
+
 before_install:
   - npm install eslint html-lint csslint
   - sudo pip install yamllint
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 
 install: true
 
@@ -29,10 +35,12 @@ before_script:
   - "./tests/test-html-lint.sh"
   - "./tests/test-shellcheck.sh"
   - "./tests/test-yamllint.sh"
-
 jobs:
   include:
     - script: ./tests/test-docker.sh
     - script: >
         npm install --prefix containers/map-api &&
         npm test --prefix containers/map-api
+    - script: >
+        npm install --prefix containers/front-end &&
+        npm test --prefix containers/front-end
