--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -1,21 +1,21 @@
-version: '2'
+version: "3.1"
 
 services:
   shop-ca:
     container_name: shop-ca
-    extends:
-      file: ./ca-base.yaml
-      service: ca-base
     image: shop-ca
+    environment:
+      - FABRIC_CA_HOME=/ca
+    command: fabric-ca-server start
     ports:
-    - 7054:7054
+      - 7054:7054
 
   fitcoin-ca:
     container_name: fitcoin-ca
-    extends:
-      file: ./ca-base.yaml
-      service: ca-base
     image: fitcoin-ca
+    environment:
+      - FABRIC_CA_HOME=/ca
+    command: fabric-ca-server start
     ports:
       - 8054:7054
 
@@ -41,16 +41,16 @@ services:
     container_name: orderer0
     image: orderer-peer
     environment:
-    - ORDERER_GENERAL_LOGLEVEL=debug
-    - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
-    - ORDERER_GENERAL_GENESISMETHOD=file
-    - ORDERER_GENERAL_GENESISFILE=/orderer/crypto/genesis.block
-    - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
-    - ORDERER_GENERAL_LOCALMSPDIR=/orderer/crypto/msp
-    - ORDERER_GENERAL_TLS_ENABLED=true
-    - ORDERER_GENERAL_TLS_PRIVATEKEY=/orderer/crypto/tls/server.key
-    - ORDERER_GENERAL_TLS_CERTIFICATE=/orderer/crypto/tls/server.crt
-    - ORDERER_GENERAL_TLS_ROOTCAS=[/orderer/crypto/tls/ca.crt]
+      - ORDERER_GENERAL_LOGLEVEL=debug
+      - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
+      - ORDERER_GENERAL_GENESISMETHOD=file
+      - ORDERER_GENERAL_GENESISFILE=/orderer/crypto/genesis.block
+      - ORDERER_GENERAL_LOCALMSPID=OrdererMSP
+      - ORDERER_GENERAL_LOCALMSPDIR=/orderer/crypto/msp
+      - ORDERER_GENERAL_TLS_ENABLED=true
+      - ORDERER_GENERAL_TLS_PRIVATEKEY=/orderer/crypto/tls/server.key
+      - ORDERER_GENERAL_TLS_CERTIFICATE=/orderer/crypto/tls/server.crt
+      - ORDERER_GENERAL_TLS_ROOTCAS=[/orderer/crypto/tls/ca.crt]
     working_dir: /orderer
     command: orderer
     ports:
@@ -58,19 +58,32 @@ services:
 
   shop-peer:
     container_name: shop-peer
-    extends:
-      file: ./peer-base.yaml
-      service: peer-base
     image: shop-peer
     environment:
-    - CORE_PEER_ID=shop-peer
-    - CORE_PEER_ADDRESS=shop-peer:7051
-    - CORE_PEER_GOSSIP_EXTERNALENDPOINT=shop-peer:7051
-    - CORE_PEER_LOCALMSPID=ShopOrgMSP
-    - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
+      - CORE_PEER_ID=shop-peer
+      - CORE_PEER_ADDRESS=shop-peer:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=shop-peer:7051
+      - CORE_PEER_LOCALMSPID=ShopOrgMSP
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb0:5984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fitcoin_default
+      - CORE_LOGGING_LEVEL=DEBUG
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_ENDORSER_ENABLED=true
+      - CORE_PEER_GOSSIP_USELEADERELECTION=true
+      - CORE_PEER_GOSSIP_ORGLEADER=false
+      - CORE_PEER_PROFILE_ENABLED=true
+      - CORE_PEER_MSPCONFIGPATH=/peer/crypto/msp
+      - CORE_PEER_TLS_CERT_FILE=/peer/crypto/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/peer/crypto/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/peer/crypto/tls/ca.crt
+    working_dir: /peer
+    command: peer node start
+    volumes:
+    - /var/run/:/host/var/run/
     ports:
     - 7051:7051
     - 7053:7053
@@ -80,26 +93,39 @@ services:
 
   fitcoin-peer:
     container_name: fitcoin-peer
-    extends:
-      file: ./peer-base.yaml
-      service: peer-base
     image: fitcoin-peer
     environment:
-    - CORE_PEER_ID=fitcoin-peer
-    - CORE_PEER_ADDRESS=fitcoin-peer:7051
-    - CORE_PEER_GOSSIP_EXTERNALENDPOINT=fitcoin-peer:7051
-    - CORE_PEER_LOCALMSPID=FitCoinOrgMSP
-    - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
-    - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
+      - CORE_PEER_ID=fitcoin-peer
+      - CORE_PEER_ADDRESS=fitcoin-peer:7051
+      - CORE_PEER_GOSSIP_EXTERNALENDPOINT=fitcoin-peer:7051
+      - CORE_PEER_LOCALMSPID=FitCoinOrgMSP
+      - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb1:5984
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_USERNAME=
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_PASSWORD=
+      - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=fitcoin_default
+      - CORE_LOGGING_LEVEL=DEBUG
+      - CORE_PEER_TLS_ENABLED=true
+      - CORE_PEER_ENDORSER_ENABLED=true
+      - CORE_PEER_GOSSIP_USELEADERELECTION=true
+      - CORE_PEER_GOSSIP_ORGLEADER=false
+      - CORE_PEER_PROFILE_ENABLED=true
+      - CORE_PEER_MSPCONFIGPATH=/peer/crypto/msp
+      - CORE_PEER_TLS_CERT_FILE=/peer/crypto/tls/server.crt
+      - CORE_PEER_TLS_KEY_FILE=/peer/crypto/tls/server.key
+      - CORE_PEER_TLS_ROOTCERT_FILE=/peer/crypto/tls/ca.crt
+    working_dir: /peer
+    command: peer node start
+    volumes:
+      - /var/run/:/host/var/run/
     ports:
-    - 8051:7051
-    - 8053:7053
+      - 8051:7051
+      - 8053:7053
     depends_on:
-    - orderer0
-    - shop-peer
-    - couchdb1
+      - orderer0
+      - shop-peer
+      - couchdb1
 
   blockchain-setup :
     container_name: blockchain-setup
@@ -118,6 +144,9 @@ services:
     - fitcoin-peer
     - couchdb0
     - couchdb1
+    secrets:
+      - config
+      - channel
 
   shop-backend :
     container_name: shop-backend
@@ -141,6 +170,9 @@ services:
     - couchdb0
     - couchdb1
     - blockchain-setup
+    secrets:
+      - config
+      - channel
 
   fitcoin-backend :
     container_name: fitcoin-backend
@@ -163,3 +195,12 @@ services:
     - couchdb0
     - couchdb1
     - blockchain-setup
+    secrets:
+      - config
+      - channel
+      
+secrets:
+  config:
+    file: ./configuration/config.json
+  channel:
+    file: ./configuration/channel.tx
