--- a/containers/front-end/package.json
+++ b/containers/front-end/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^5.0.0",
     "angular-in-memory-web-api": "^0.5.2",
     "core-js": "^2.4.1",
+    "d3": "^4.12.2",
+    "d3-hexbin": "^0.2.2",
     "rxjs": "^5.5.2",
     "timers": "^0.1.1",
     "zone.js": "^0.8.14"
@@ -31,6 +33,7 @@
     "@angular/cli": "^1.6.1",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
+    "@types/d3": "^4.12.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
