Update to RabbitMQ

--- a/containers/blockchain/testApplication/package.json
+++ b/containers/blockchain/testApplication/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "amqplib": "^0.5.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
