--- a/containers/blockchain/shopBackend/package.json
+++ b/containers/blockchain/shopBackend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
+    "amqplib": "^0.5.2",
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
