--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -166,9 +166,10 @@ services:
     - DOCKER_CCENV_IMAGE=hyperledger/fabric-ccenv:x86_64-1.0.2
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=seller_queue
+    - SOCKETPORT=3030
     ports:
     - 3002:3000
-    - 8080:8080
+    - 3030:3030
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
@@ -184,7 +185,7 @@ services:
     secrets:
       - config
       - channel
-      
+
   fitcoin-backend :
     container_name: fitcoin-backend
     image: fitcoin-backend
@@ -195,8 +196,10 @@ services:
     - DOCKER_CCENV_IMAGE=hyperledger/fabric-ccenv:x86_64-1.0.2
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=user_queue
+    - SOCKETPORT=3030
     ports:
     - 3001:3000
+    - 3031:3030
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
