--- a/containers/map-api/package.json
+++ b/containers/map-api/package.json
@@ -19,6 +19,7 @@
     "assert": "^1.4.x",
     "body-parser": "^1.17.x",
     "cors": "^2.8.x",
+    "ejs": "^2.5.7",
     "express": "^4.15.x",
     "fs": "~0.0.1",
     "mongoose": "^4.13.x",
