--- a/containers/blockchain/shopBackend/package.json
+++ b/containers/blockchain/shopBackend/package.json
@@ -29,6 +29,7 @@
     "url": "^0.11.0",
     "util": "^0.10.3",
     "uuid": "^3.2.1",
-    "ws": "^4.0.0"
+    "ws": "^4.0.0",
+    "request": "2.83.0"
   }
 }
