redis server config

--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -1,6 +1,13 @@
 version: "3.1"
 
 services:
+  redis-server:
+    container_name: redis-server
+    image: redis:4.0.5-alpine
+    command: ["redis-server", "--appendonly", "yes"]
+    ports:
+      - 6379:6379
+
   shop-ca:
     container_name: shop-ca
     image: shop-ca
@@ -152,6 +159,8 @@ services:
     - fitcoin-peer
     - couchdb0
     - couchdb1
+    - rabbitmq
+    - redis-server
     secrets:
       - config
       - channel
@@ -167,6 +176,8 @@ services:
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=seller_queue
     - SOCKETPORT=3030
+    - MESSAGEEXPIRY=600
+    - WORKERCLIENTS=1
     ports:
     - 3002:3000
     - 3030:3030
@@ -182,6 +193,7 @@ services:
     - couchdb1
     - blockchain-setup
     - rabbitmq
+    - redis-server
     secrets:
       - config
       - channel
@@ -197,6 +209,8 @@ services:
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=user_queue
     - SOCKETPORT=3030
+    - MESSAGEEXPIRY=600
+    - WORKERCLIENTS=1
     ports:
     - 3001:3000
     - 3031:3030
@@ -212,6 +226,7 @@ services:
     - couchdb1
     - blockchain-setup
     - rabbitmq
+    - redis-server
     secrets:
       - config
       - channel
