--- a/containers/blockchain/fitcoinBackend/package.json
+++ b/containers/blockchain/fitcoinBackend/package.json
@@ -25,9 +25,11 @@
     "json-style-converter": "^1.0.3",
     "long": "^3.2.0",
     "path": "^0.12.7",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.4",
     "url": "^0.11.0",
     "util": "^0.10.3",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "ws": "^4.0.0"
   }
 }
