--- a/containers/blockchain/shopBackend/package.json
+++ b/containers/blockchain/shopBackend/package.json
@@ -25,6 +25,7 @@
     "json-style-converter": "^1.0.3",
     "long": "^3.2.0",
     "path": "^0.12.7",
+    "redis": "^2.8.0",
     "socket.io": "^2.0.4",
     "url": "^0.11.0",
     "util": "^0.10.3",
