--- a/containers/blockchain/rabbitClient/package.json
+++ b/containers/blockchain/rabbitClient/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain",
   "version": "1.0.0",
-  "description": "Setup Blockchain for fitcoin network",
+  "description": "API for for rabbit client",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,20 +17,10 @@
     "cors": "^2.8.4",
     "events": "^1.1.1",
     "express": "^4.16.2",
-    "fabric-ca-client": "^1.1.0-preview",
-    "fabric-client": "^1.1.0-preview",
     "fs": "0.0.1-security",
-    "grpc": "^1.8.0",
-    "http": "0.0.0",
-    "json-style-converter": "^1.0.3",
-    "long": "^3.2.0",
     "path": "^0.12.7",
     "redis": "^2.8.0",
     "socket.io": "^2.0.4",
-    "url": "^0.11.0",
-    "util": "^0.10.3",
-    "uuid": "^3.2.1",
-    "ws": "^4.0.0",
-    "request": "2.83.0"
+    "uuid": "^3.2.1"
   }
 }
