--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -1,6 +1,50 @@
 version: "3.1"
 
 services:
+  rabbitmq1:
+    image: rabbitmq:3-management
+    hostname: rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+      - RABBITMQ_DEFAULT_VHOST=/
+
+  rabbitmq2:
+    image: rabbitmq:3-management
+    hostname: rabbitmq2
+    depends_on:
+      - rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+    volumes:
+      - ./rabbitCluster/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq3:
+    image: rabbitmq:3-management
+    hostname: rabbitmq3
+    depends_on:
+      - rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+    volumes:
+      - ./rabbitCluster/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq:
+    container_name: rabbitmq
+    image: haproxy:1.7
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    depends_on:
+      - rabbitmq1
+      - rabbitmq2
+      - rabbitmq3
+    ports:
+      - 15672:15672
+      - 5672:5672
+
   redis-server:
     container_name: redis-server
     image: redis:4.0.5-alpine
@@ -44,12 +88,12 @@ services:
     ports:
       - 6984:5984
 
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:management
-    ports:
-      - "5672:5672"
-      - "15672:15672"
+#  rabbitmq:
+#    container_name: rabbitmq
+#    image: rabbitmq:management
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
 
   orderer0:
     container_name: orderer0
@@ -165,7 +209,7 @@ services:
       - channel
 
   shop-backend :
-    container_name: shop-backend
+    #container_name: shop-backend
     image: backend
     environment:
     - ORGID=org.ShopOrg
@@ -187,7 +231,7 @@ services:
       - channel
 
   fitcoin-backend :
-    container_name: fitcoin-backend
+    #container_name: fitcoin-backend
     image: backend
     environment:
     - ORGID=org.FitCoinOrg
