--- a/containers/blockchain/backend/package.json
+++ b/containers/blockchain/backend/package.json
@@ -13,10 +13,7 @@
     "babel-core": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "body-parser": "^1.18.2",
-    "cors": "^2.8.4",
     "events": "^1.1.1",
-    "express": "^4.16.2",
     "fabric-ca-client": "^1.1.0-preview",
     "fabric-client": "^1.1.0-preview",
     "fs": "0.0.1-security",
@@ -25,11 +22,11 @@
     "json-style-converter": "^1.0.3",
     "long": "^3.2.0",
     "path": "^0.12.7",
-    "redis": "^2.8.0",
+    "redis-clustr": "^1.5.2",
+    "request": "2.83.0",
     "socket.io": "^2.0.4",
     "url": "^0.11.0",
     "util": "^0.10.3",
-    "uuid": "^3.2.1",
-    "request": "2.83.0"
+    "uuid": "^3.2.1"
   }
 }
