--- a/containers/blockchain/rabbitClient/package.json
+++ b/containers/blockchain/rabbitClient/package.json
@@ -19,8 +19,7 @@
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "redis": "^2.8.0",
-    "socket.io": "^2.0.4",
+    "redis-clustr": "^1.5.2",
     "uuid": "^3.2.1"
   }
 }
