--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -1,12 +1,65 @@
 version: "3.1"
 
 services:
-  redis-server:
-    container_name: redis-server
-    image: redis:4.0.5-alpine
-    command: ["redis-server", "--appendonly", "yes"]
+  rabbitmq1:
+    container_name: rabbitmq1
+    image: rabbitmq:3-management
+    hostname: rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+      - RABBITMQ_DEFAULT_VHOST=/
+
+  rabbitmq2:
+    container_name: rabbitmq2
+    image: rabbitmq:3-management
+    hostname: rabbitmq2
+    depends_on:
+      - rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+    volumes:
+      - ./rabbitCluster/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq3:
+    container_name: rabbitmq3
+    image: rabbitmq:3-management
+    hostname: rabbitmq3
+    depends_on:
+      - rabbitmq1
+    environment:
+      - RABBITMQ_ERLANG_COOKIE=12345
+    volumes:
+      - ./rabbitCluster/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq:
+    container_name: rabbitmq
+    hostname: rabbitmq
+    image: haproxy:1.7
+    volumes:
+      - ./haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    depends_on:
+      - rabbitmq1
+      - rabbitmq2
+      - rabbitmq3
     ports:
-      - 6379:6379
+      - 15672:15672
+      - 5672:5672
+
+#  redis-server:
+#    container_name: redis-server
+#    image: redis:4.0.5-alpine
+#    command: ["redis-server", "--appendonly", "yes"]
+#    ports:
+#      - 6379:6379
+  redis-server:
+     hostname: redis-server
+     image: redis-server
+     ports:
+       - '7000-7007:7000-7007'
 
   shop-ca:
     container_name: shop-ca
@@ -44,12 +97,12 @@ services:
     ports:
       - 6984:5984
 
-  rabbitmq:
-    container_name: rabbitmq
-    image: rabbitmq:management
-    ports:
-      - "5672:5672"
-      - "15672:15672"
+#  rabbitmq:
+#    container_name: rabbitmq
+#    image: rabbitmq:management
+#    ports:
+#      - "5672:5672"
+#      - "15672:15672"
 
   orderer0:
     container_name: orderer0
@@ -145,7 +198,6 @@ services:
     container_name: blockchain-setup
     image: blockchain-setup
     environment:
-    - PORT=3000
     - DOCKER_SOCKET_PATH=/host/var/run/docker.sock
     - DOCKER_CCENV_IMAGE=hyperledger/fabric-ccenv:x86_64-1.0.2
     - SECRETSDIR=/run/secrets
@@ -159,37 +211,25 @@ services:
     - fitcoin-peer
     - couchdb0
     - couchdb1
-    - rabbitmq
-    - redis-server
     secrets:
       - config
       - channel
 
   shop-backend :
-    container_name: shop-backend
-    image: shop-backend
+    #container_name: shop-backend
+    image: backend
     environment:
-    - PORT=3000
     - ORGID=org.ShopOrg
     - DOCKER_SOCKET_PATH=/host/var/run/docker.sock
     - DOCKER_CCENV_IMAGE=hyperledger/fabric-ccenv:x86_64-1.0.2
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=seller_queue
     - SOCKETPORT=3030
-    - MESSAGEEXPIRY=600
-    ports:
-    - 3002:3000
-    - 3030:3030
+    - MESSAGEEXPIRY=300
+    - EVENTEMITTER=true
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
-    - orderer0
-    - shop-ca
-    - shop-peer
-    - fitcoin-ca
-    - fitcoin-peer
-    - couchdb0
-    - couchdb1
     - blockchain-setup
     - rabbitmq
     - redis-server
@@ -198,31 +238,33 @@ services:
       - channel
 
   fitcoin-backend :
-    container_name: fitcoin-backend
-    image: fitcoin-backend
+    #container_name: fitcoin-backend
+    image: backend
     environment:
-    - PORT=3000
     - ORGID=org.FitCoinOrg
     - DOCKER_SOCKET_PATH=/host/var/run/docker.sock
     - DOCKER_CCENV_IMAGE=hyperledger/fabric-ccenv:x86_64-1.0.2
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=user_queue
-    - SOCKETPORT=3030
-    - MESSAGEEXPIRY=600
-    ports:
-    - 3001:3000
-    - 3031:3030
+    - MESSAGEEXPIRY=300
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
-    - orderer0
-    - shop-ca
-    - shop-peer
-    - fitcoin-ca
-    - fitcoin-peer
-    - couchdb0
-    - couchdb1
     - blockchain-setup
+    - rabbitmq
+    - redis-server
+    secrets:
+      - config
+      - channel
+
+  rabbit-client :
+    container_name: rabbit-client
+    image: rabbit-client
+    environment:
+    - SECRETSDIR=/run/secrets
+    ports:
+    - 3000:3000
+    depends_on:
     - rabbitmq
     - redis-server
     secrets:
