--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -227,6 +227,9 @@ services:
     - SOCKETPORT=3030
     - MESSAGEEXPIRY=300
     - EVENTEMITTER=true
+    - SENDTOIOT=false
+    ports:
+    - 3030:3030
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
@@ -247,6 +250,7 @@ services:
     - SECRETSDIR=/run/secrets
     - RABBITMQQUEUE=user_queue
     - MESSAGEEXPIRY=300
+    - SENDTOIOT=false
     volumes:
     - /var/run/:/host/var/run/
     depends_on:
