--- a/containers/blockchain/blockchainNetwork/package.json
+++ b/containers/blockchain/blockchainNetwork/package.json
@@ -16,13 +16,14 @@
     "fabric-ca-client": "^1.1.0-preview",
     "fabric-client": "^1.1.0-preview",
     "fs": "0.0.1-security",
+    "fs-extra": "^5.0.0",
     "grpc": "^1.8.0",
     "http": "0.0.0",
     "json-style-converter": "^1.0.3",
     "long": "^3.2.0",
+    "nano": "^6.4.2",
     "path": "^0.12.7",
     "url": "^0.11.0",
-    "long": "^3.2.0",
     "util": "^0.10.3"
   }
 }
