Add yaml files for registeree-api
Created a yaml file for a registeree-api-deployment in kubernetes
Updated dashboard dockerfile to create a node-alpine image for less memory
Created a backup map-api for dashboard purposes

Signed-off by: Darryl Balderas <Darryl.Balderas@ibm.com>

--- a/containers/front-end/.dockerignore
+++ b/containers/front-end/.dockerignore
@@ -2,3 +2,9 @@ node_modules/
 .gitignore
 README.md
 package-lock.json
+e2e/
+protractor.conf.js
+.editorconfig
+.DS_Store
+karma.conf.js
+tslint.json
