--- a/containers/blockchain/backend/package.json
+++ b/containers/blockchain/backend/package.json
@@ -14,8 +14,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "events": "^1.1.1",
-    "fabric-ca-client": "^1.1.0-preview",
-    "fabric-client": "^1.1.0-preview",
+    "fabric-ca-client": "^1.0.4",
+    "fabric-client": "^1.0.4",
     "fs": "0.0.1-security",
     "grpc": "^1.8.0",
     "http": "0.0.0",
