--- a/containers/registeree-api/package.json
+++ b/containers/registeree-api/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node app.js",
-    "test": "mocha --timeout 600000"
+    "test": "mocha --timeout 600000",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "eslint": "^4.18.2",
     "mocha": "^2.4.5"
   },
   "author": "Darryl Balderas",
