--- a/kubernetes-config/registeree-api/registeree-api.yaml
+++ b/kubernetes-config/registeree-api/registeree-api.yaml
@@ -30,6 +30,7 @@ spec:
     spec:
       containers:
         - image: darryl3223/registeree-api:1.0
+          imagePullPolicy: Always
           name: registeree-api
           env:
             - name: MONGODB_URL
