--- a/containers/blockchain/docker-compose.yaml
+++ b/containers/blockchain/docker-compose.yaml
@@ -3,7 +3,8 @@ version: "3.1"
 services:
   ca-datastore:
     container_name: ca-datastore
-    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+#    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+    image: ishangulhane/fabric-couchdb
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -17,7 +18,8 @@ services:
 
   fitcoin-statedb:
     container_name: fitcoin-statedb
-    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+#    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+    image: ishangulhane/fabric-couchdb
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
@@ -31,7 +33,8 @@ services:
 
   shop-statedb:
     container_name: shop-statedb
-    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+#    image: hyperledger/fabric-couchdb:x86_64-1.0.6
+    image: ishangulhane/fabric-couchdb
     environment:
       - COUCHDB_USER=
       - COUCHDB_PASSWORD=
